Deleting an object doesn't always remove shader node links to it #51625

Closed
opened 2017-05-25 17:02:02 +02:00 by Konstantins Visnevskis · 14 comments

System Information
Win8.1x64, 3x gtx580

Blender Version
2.78c

Short description of error
If the file was saved+opened after linking or an undo was made, deleting a shader node linked object doesn't remove the link.

Exact steps for others to reproduce the error

  • Point shader node to the cube on the right
  • Delete the cube on the right
  • The link to non-existent cube in the first cube's shader is removed as expected
  • Undo back to having both cubes
  • The second cube now is marked as linked to another scene (blue dot)
  • Deleting the second cube now leaves a shader node's link to it intact
**System Information** Win8.1x64, 3x gtx580 **Blender Version** 2.78c **Short description of error** If the file was saved+opened after linking or an undo was made, deleting a shader node linked object doesn't remove the link. **Exact steps for others to reproduce the error** - Point shader node to the cube on the right - Delete the cube on the right - The link to non-existent cube in the first cube's shader is removed as expected - Undo back to having both cubes - The second cube now is marked as linked to another scene (blue dot) - Deleting the second cube now leaves a shader node's link to it intact

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis

The file: delete.blend

The file: [delete.blend](https://archive.blender.org/developer/F609058/delete.blend)

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

This comment was removed by @FloridaJo

*This comment was removed by @FloridaJo*

Ok, I think I know what you mean now.
For me.
1)link in Texture shader cube.001 to cube
2) delete cube.001
3)go back to materials and for me, link to cube.001 is still there. (I didn't have to do any undos)

I believe this may be related to your previous bug report #51624

Ok, I think I know what you mean now. For me. 1)link in Texture shader cube.001 to cube 2) delete cube.001 3)go back to materials and for me, link to cube.001 is still there. (I didn't have to do any undos) I believe this may be related to your previous bug report #51624

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2017-05-29 11:45:01 +02:00

Thanks for the report, but would not consider this a bug for now.

Thing is, getting rid of all object usages when deleting it from scene is already really hacky process, full of special cases and exceptions, and I’d rather get rid of it entirely, rather giving user easy way to manage uninstanced objects (i.e. easy way to re-instance them in a scene, since they can already easily delete them for real in Outliner).

But this is TODO really.

Thanks for the report, but would not consider this a bug for now. Thing is, getting rid of all object usages when deleting it from scene is already really hacky process, full of special cases and exceptions, and I’d rather get rid of it entirely, rather giving user easy way to manage uninstanced objects (i.e. easy way to re-instance them in a scene, since they can already easily delete them for real in Outliner). But this is TODO really.

Thanks. Not sure I get "delete for real" in outliner part though, as in Outliner->Blender file mode, Right click->Delete on objects acts the same as normal delete. That is - nothing happens if an object has shader node users.

Thanks. Not sure I get "delete for real" in outliner part though, as in Outliner->Blender file mode, Right click->Delete on objects acts the same as normal delete. That is - nothing happens if an object has shader node users.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Eeek you are right about being impossible to delete uninstantiated objects from Outliner. Will fix that.

Eeek you are right about being impossible to delete uninstantiated objects from Outliner. Will fix that.

This issue was referenced by 08b7955415

This issue was referenced by 08b79554156e81ece766e854fe15e34c7d4a7572

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51625
No description provided.