Fix T51625: fix impossibility to delete uninstantiated objects from Outliner.

The fact that we can end with uninstantiated objects is not expected
currently, but would rather not start chasing all corner cases that may
lead to that situation.

User shall be able to delete uninstantiated objects from Outliner, though!